--- a/vue-tutorial/package.json
+++ b/vue-tutorial/package.json
@@ -24,6 +24,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "jest": "^25.2.7",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.11"
   },
